--- a/Views/TeachingAssistant/Assgined.cshtml
+++ b/Views/TeachingAssistant/Assgined.cshtml
@@ -82,10 +82,10 @@
                                 {
                                     if (item.TenHocKy.Equals("242"))
                                     {
-                                        <option selected value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                        <option selected value="@item.ID">@item.TenHocKy</option>
                                         continue;
                                     }
-                                    <option value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                    <option value="@item.ID">@item.TenHocKy</option>
                                 }
                             </select>
                         </div>
