--- a/Views/TeachingAssistant/ResultApply.cshtml
+++ b/Views/TeachingAssistant/ResultApply.cshtml
@@ -72,11 +72,11 @@
 
                                     if (idhkGanNhat == item.ID)
                                     {
-                                        <option selected value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                        <option selected value="@item.ID">@item.TenHocKy</option>
                                     }
                                     else
                                     {
-                                        <option value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                        <option value="@item.ID">@item.TenHocKy</option>
                                     }
                                 }
                             </select>
