--- a/Views/ClassSection/QuanLyLopHoc.cshtml
+++ b/Views/ClassSection/QuanLyLopHoc.cshtml
@@ -74,11 +74,11 @@
 
                                     if (id_hkGanNhat == item.ID)
                                     {
-                                        <option selected value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                        <option selected value="@item.ID">@item.TenHocKy</option>
                                     }
                                     else
                                     {
-                                        <option value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                        <option value="@item.ID">@item.TenHocKy</option>
                                     }
                                 }
                             </select>
