--- a/Views/TeachingAssistant/Registered.cshtml
+++ b/Views/TeachingAssistant/Registered.cshtml
@@ -16,17 +16,7 @@
         id_hkGanNhat = lstHk.First().ID;
     }
 
-    var formDky = models.FormDangKyTroGiang.FirstOrDefault(w => w.ID_HocKy == id_hkGanNhat && w.Nganh.TenNganh.ToLower().Equals("công nghệ thông tin"));
-
-    int id_nganhCNTT = 0;
-    int idForm = 0;
-    if (formDky != null)
-    {
-        id_nganhCNTT = formDky.ID_Nganh;
-        idForm = formDky.ID;
-    }
-
-    var lstUs = models.UngTuyenTroGiang.Where(w => w.ID_FormDangKyTroGiang == idForm).ToList().OrderBy(o => o.ID);
+    var formDky = models.FormDangKyTroGiang.Where(w => w.ID_HocKy == id_hkGanNhat && w.Nganh.TenNganh.ToLower().Equals("công nghệ thông tin")).ToList().OrderByDescending(o => o.ID);
     int i = 0;
 }
 <script src="~/ActiveItemMenu/TeachingAssistant/registered.js"></script>
@@ -74,11 +64,11 @@
                                 {
                                     if (id_hkGanNhat == item.ID)
                                     {
-                                        <option name="@item.TenHocKy" selected value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                        <option name="@item.TenHocKy" selected value="@item.ID">@item.TenHocKy</option>
                                     }
                                     else
                                     {
-                                        <option name="@item.TenHocKy" value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                        <option name="@item.TenHocKy" value="@item.ID">@item.TenHocKy</option>
                                     }
                                 }
                             </select>
@@ -88,7 +78,7 @@
                             <select id="nganh" class="form-select" data-width="100%">
                                 @foreach (var item in lstNganh)
                                 {
-                                    if (item.ID == id_nganhCNTT)
+                                    if (item.TenNganh.ToLower().Equals("công nghệ thông tin"))
                                     {
                                         <option name="@item.TenNganh" selected value="@item.ID">@item.TenNganh</option>
                                     }
@@ -132,76 +122,79 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (var item in lstUs)
+                                @foreach (var items in formDky.ToList())
                                 {
-                                    i++;
-                                    int idut = item.ID;
-                                    int idtk = item.ID_TaiKhoan;
-                                    int idlhp = item.ID_LopHocPhan;
+                                    foreach (var item in items.UngTuyenTroGiang.ToList().OrderByDescending(o => o.ID))
+                                    {
+                                        i++;
+                                        int idut = item.ID;
+                                        int idtk = item.ID_TaiKhoan;
+                                        int idlhp = item.ID_LopHocPhan;
 
-                                    <tr>
-                                        <td valign="middle">@i</td>
-                                        <td valign="middle">
-                                            MSSV: @item.MSSV
-                                            <br />
-                                            Họ & Tên: @item.HoTen
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            @item.Email
-                                            <br />
-                                            <span data-bs-toggle="tooltip" data-bs-html="true" title="Số ĐT: @item.SoDienThoai<br/>Ngày sinh: @(item.NgaySinh != null ? item.NgaySinh.Value.ToString("yyyy-MM-dd") : "")<br />Giới tính: @item.GioiTinh<br />Ngành: @(item.TaiKhoan.ID_Nganh != null ? item.TaiKhoan.Nganh.TenNganh : "")" class="badge bg-info" role="button"><i class="bi bi-info-circle me-2"></i>Thông tin thêm</span>
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            Mã LHP: @item.LopHocPhan.MaLHP
-                                            <br />
-                                            Tên HP: @item.LopHocPhan.TenHP
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            TB Chung: @item.DiemTBTL
-                                            <br />
-                                            Rèn luyện: @item.DiemRL
-                                            <br />
-                                            TK môn: @item.DiemTKMH
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            @if (models.PhanCongTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idtk && f.ID_LopHocPhan == idlhp) != null)
-                                            {
-                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-primary">Đã phân công</span>
-                                            }
-                                            else if (models.DanhGiaPhongVan.FirstOrDefault(f => f.ID_UngTuyenTroGiang == idut) != null)
-                                            {
-                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-danger">Phỏng vấn trượt</span>
-                                            }
-                                            else if (!item.TrangThai)
-                                            {
-                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-warning">Chưa được duyệt</span>
-                                            }
-                                            else
-                                            {
-                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-success">Đã được duyệt</span>
-                                            }
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            @if (models.PhanCongTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idtk && f.ID_LopHocPhan == idlhp) != null)
-                                            {
-                                                <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" trangthaiUT="daphancong" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
-                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết"><i class="bi bi-info-square"></i></span>
-                                                </a>
-                                            }
-                                            else if (models.DanhGiaPhongVan.FirstOrDefault(f => f.ID_UngTuyenTroGiang == idut) != null)
-                                            {
-                                                <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" trangthaiUT="daphancong" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
-                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết"><i class="bi bi-info-square"></i></span>
-                                                </a>
-                                            }
-                                            else
-                                            {
-                                                <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" trangthaiUT="@item.TrangThai.ToString().ToLower()" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
-                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết & xét duyệt"><i class="bi bi-info-square"></i></span>
-                                                </a>
-                                            }
-                                        </td>
-                                    </tr>
+                                        <tr>
+                                            <td valign="middle">@i</td>
+                                            <td valign="middle">
+                                                MSSV: @item.MSSV
+                                                <br />
+                                                Họ & Tên: @item.HoTen
+                                            </td>
+                                            <td valign="middle" class="text-nowrap">
+                                                @item.Email
+                                                <br />
+                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Số ĐT: @item.SoDienThoai<br/>Ngày sinh: @(item.NgaySinh != null ? item.NgaySinh.Value.ToString("yyyy-MM-dd") : "")<br />Giới tính: @item.GioiTinh<br />Ngành: @(item.TaiKhoan.ID_Nganh != null ? item.TaiKhoan.Nganh.TenNganh : "")" class="badge bg-info" role="button"><i class="bi bi-info-circle me-2"></i>Thông tin thêm</span>
+                                            </td>
+                                            <td valign="middle" class="text-nowrap">
+                                                Mã LHP: @item.LopHocPhan.MaLHP
+                                                <br />
+                                                Tên HP: @item.LopHocPhan.TenHP
+                                            </td>
+                                            <td valign="middle" class="text-nowrap">
+                                                TB Chung: @item.DiemTBTL
+                                                <br />
+                                                Rèn luyện: @item.DiemRL
+                                                <br />
+                                                TK môn: @item.DiemTKMH
+                                            </td>
+                                            <td valign="middle" class="text-nowrap">
+                                                @if (models.PhanCongTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idtk && f.ID_LopHocPhan == idlhp) != null)
+                                                {
+                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-primary">Đã phân công</span>
+                                                }
+                                                else if (models.DanhGiaPhongVan.FirstOrDefault(f => f.ID_UngTuyenTroGiang == idut) != null)
+                                                {
+                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-danger">Phỏng vấn trượt</span>
+                                                }
+                                                else if (!item.TrangThai)
+                                                {
+                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-warning">Chưa được duyệt</span>
+                                                }
+                                                else
+                                                {
+                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-success">Đã được duyệt</span>
+                                                }
+                                            </td>
+                                            <td valign="middle" class="text-nowrap">
+                                                @if (models.PhanCongTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idtk && f.ID_LopHocPhan == idlhp) != null)
+                                                {
+                                                    <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" trangthaiUT="daphancong" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
+                                                        <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết"><i class="bi bi-info-square"></i></span>
+                                                    </a>
+                                                }
+                                                else if (models.DanhGiaPhongVan.FirstOrDefault(f => f.ID_UngTuyenTroGiang == idut) != null)
+                                                {
+                                                    <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" trangthaiUT="daphancong" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
+                                                        <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết"><i class="bi bi-info-square"></i></span>
+                                                    </a>
+                                                }
+                                                else
+                                                {
+                                                    <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" trangthaiUT="@item.TrangThai.ToString().ToLower()" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
+                                                        <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết & xét duyệt"><i class="bi bi-info-square"></i></span>
+                                                    </a>
+                                                }
+                                            </td>
+                                        </tr>
+                                    }
                                 }
                             </tbody>
                         </table>
