--- a/Views/TeachingAssistant/Registereds.cshtml
+++ b/Views/TeachingAssistant/Registereds.cshtml
@@ -16,18 +16,10 @@
         id_hkGanNhat = lstHk.First().ID;
     }
 
-    var formDky = models.FormDangKyTroGiang.FirstOrDefault(w => w.ThoiGianMo <= currentDate && w.ThoiGianDong >= currentDate && w.Nganh.TenNganh.ToLower().Equals("công nghệ thông tin"));
-
-    int id_nganhCNTT = 0;
-    int idForm = 0;
-    if (formDky != null)
-    {
-        id_nganhCNTT = formDky.ID_Nganh;
-        idForm = formDky.ID;
-    }
-
-    var lstUs = models.UngTuyenTroGiang.Where(w => w.ID_FormDangKyTroGiang == idForm && w.TrangThai == true).ToList().OrderBy(o => o.ID);
+    var formDky = models.FormDangKyTroGiang.Where(w => w.ID_HocKy == id_hkGanNhat && w.Nganh.TenNganh.ToLower().Equals("công nghệ thông tin")).ToList().OrderByDescending(o => o.ID);
     int i = 0;
+
+    var tk = Session["Taikhoan"] as TaiKhoan;
 }
 <script src="~/ActiveItemMenu/TeachingAssistant/registered.js"></script>
 <section class="container-fluid p-4">
@@ -74,11 +66,11 @@
                                 {
                                     if (id_hkGanNhat == item.ID)
                                     {
-                                        <option name="@item.TenHocKy" selected value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                        <option name="@item.TenHocKy" selected value="@item.ID">@item.TenHocKy</option>
                                     }
                                     else
                                     {
-                                        <option name="@item.TenHocKy" value="@item.ID">Học kỳ @item.TenHocKy</option>
+                                        <option name="@item.TenHocKy" value="@item.ID">@item.TenHocKy</option>
                                     }
                                 }
                             </select>
@@ -108,12 +100,12 @@
                             </select>
                         </div>
                         @*<div class="mb-3 col-md-3 col-12" style="display: flex; flex-direction: row; align-items: end">
-                            <div style="width: 100%; text-align: end">
-                                <a id="btnExport" class="btn btn-outline-secondary">
-                                    <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
-                                </a>
-                            </div>
-                        </div>*@
+                                <div style="width: 100%; text-align: end">
+                                    <a id="btnExport" class="btn btn-outline-secondary">
+                                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                                    </a>
+                                </div>
+                            </div>*@
                     </div>
                 </div>
                 <!-- table  -->
@@ -131,93 +123,96 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (var item in lstUs)
+                                @foreach (var items in formDky.ToList())
                                 {
-                                    var idtks = item.ID_TaiKhoan;
-                                    i++;
-                                    <tr>
-                                        <td valign="middle">
-                                            MSSV: @item.MSSV
-                                            <br />
-                                            Họ & Tên: @item.HoTen
-                                            <br />
-                                            <span class="text-nowrap">Email: @item.Email</span>
-                                            <br />
-                                            <span data-bs-toggle="tooltip" data-bs-html="true" title="Số ĐT: @item.SoDienThoai<br/>Ngày sinh: @(item.NgaySinh != null ? item.NgaySinh.Value.ToString("yyyy-MM-dd") : "")<br />Giới tính: @item.GioiTinh" class="badge bg-info" role="button"><i class="bi bi-info-circle me-2"></i>Thông tin thêm</span>
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            Mã LHP: @item.LopHocPhan.MaLHP
-                                            <br />
-                                            Tên HP: @item.LopHocPhan.TenHP
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            TB Chung: @item.DiemTBTL
-                                            <br />
-                                            Rèn luyện: @item.DiemRL
-                                            <br />
-                                            TK môn: @item.DiemTKMH
-                                        </td>
-                                        <td valign="middle">
-                                            @if (item.LopHocPhan.PhanCongTroGiang.Where(w => w.ID_TaiKhoan != idtks).Count() > 0)
-                                            {
-                                                if (item.DanhGiaPhongVan.Count > 0)
+                                    foreach (var item in items.UngTuyenTroGiang.Where(w => w.LopHocPhan.MaCBGD.Equals(tk.Ma)).ToList().OrderByDescending(o => o.ID))
+                                    {
+                                        var idtks = item.ID_TaiKhoan;
+                                        i++;
+                                        <tr>
+                                            <td valign="middle"> 
+                                                MSSV: @item.MSSV
+                                                <br />
+                                                Họ & Tên: @item.HoTen
+                                                <br />
+                                                <span class="text-nowrap">Email: @item.Email</span>
+                                                <br />
+                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Số ĐT: @item.SoDienThoai<br/>Ngày sinh: @(item.NgaySinh != null ? item.NgaySinh.Value.ToString("yyyy-MM-dd") : "")<br />Giới tính: @item.GioiTinh" class="badge bg-info" role="button"><i class="bi bi-info-circle me-2"></i>Thông tin thêm</span>
+                                            </td>
+                                            <td valign="middle" class="text-nowrap">
+                                                Mã LHP: @item.LopHocPhan.MaLHP
+                                                <br />
+                                                Tên HP: @item.LopHocPhan.TenHP
+                                            </td>
+                                            <td valign="middle" class="text-nowrap">
+                                                TB Chung: @item.DiemTBTL
+                                                <br />
+                                                Rèn luyện: @item.DiemRL
+                                                <br />
+                                                TK môn: @item.DiemTKMH
+                                            </td>
+                                            <td valign="middle">
+                                                @if (item.LopHocPhan.PhanCongTroGiang.Where(w => w.ID_TaiKhoan != idtks).Count() > 0)
                                                 {
-                                                    if (!item.DanhGiaPhongVan.First().KetLuanDat.Value)
+                                                    if (item.DanhGiaPhongVan.Count > 0)
                                                     {
-                                                        <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="false" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để xem thông tin/kết quả phỏng vấn" class="btn btn-danger btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Chưa đạt</a>
+                                                        if (!item.DanhGiaPhongVan.First().KetLuanDat.Value)
+                                                        {
+                                                            <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="false" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để xem thông tin/kết quả phỏng vấn" class="btn btn-danger btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Chưa đạt</a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="false" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để xem thông tin/kết quả phỏng vấn" class="btn btn-success btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Đạt</a>
+                                                        }
                                                     }
                                                     else
                                                     {
-                                                        <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="false" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để xem thông tin/kết quả phỏng vấn" class="btn btn-success btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Đạt</a>
+                                                        <a data-bs-toggle="tooltip" data-bs-html="true" style="min-width: 130px !important" title="LHP đã có TA không cần phỏng vấn" class="btn btn-warning btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>LHP đã có TA</a>
                                                     }
                                                 }
                                                 else
                                                 {
-                                                    <a data-bs-toggle="tooltip" data-bs-html="true" style="min-width: 130px !important" title="LHP đã có TA không cần phỏng vấn" class="btn btn-warning btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>LHP đã có TA</a>
-                                                }
-                                            }
-                                            else
-                                            {
-                                                if (item.DanhGiaPhongVan.Count > 0)
-                                                {
-                                                    if (!item.DanhGiaPhongVan.First().KetLuanDat.Value)
+                                                    if (item.DanhGiaPhongVan.Count > 0)
                                                     {
-                                                        <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="false" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để xem thông tin/kết quả phỏng vấn" class="btn btn-danger btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Chưa đạt</a>
+                                                        if (!item.DanhGiaPhongVan.First().KetLuanDat.Value)
+                                                        {
+                                                            <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="false" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để xem thông tin/kết quả phỏng vấn" class="btn btn-danger btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Chưa đạt</a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="false" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để xem thông tin/kết quả phỏng vấn" class="btn btn-success btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Đạt</a>
+                                                        }
                                                     }
                                                     else
                                                     {
-                                                        <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="false" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để xem thông tin/kết quả phỏng vấn" class="btn btn-success btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Đạt</a>
+                                                        <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="true" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Cập nhật kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để cập nhật kết quả phỏng vấn" class="btn btn-primary btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Chưa PV</a>
+                                                    }
+                                                }
+                                            </td>
+                                            <td valign="middle" class="text-nowrap">
+                                                @if (item.LopHocPhan.PhanCongTroGiang.Count() > 0)
+                                                {
+                                                    if (item.LopHocPhan.PhanCongTroGiang.FirstOrDefault(w => w.ID_TaiKhoan == idtks) == null)
+                                                    {
+                                                        <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-warning">Chưa phân công</span>
+                                                    }
+                                                    else
+                                                    {
+                                                        <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-success">Đã phân công</span>
                                                     }
                                                 }
                                                 else
-                                                {
-                                                    <a id="ketquapv-@item.ID" name="@item.ID" style="min-width: 130px !important" editState="true" data-bs-toggle="tooltip" data-bs-html="true" titleForm="Cập nhật kết quả phỏng vấn TA: @item.MSSV - @item.HoTen" title="Chọn để cập nhật kết quả phỏng vấn" class="btn btn-primary btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Chưa PV</a>
-                                                }
-                                            }
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            @if (item.LopHocPhan.PhanCongTroGiang.Count() > 0)
-                                            {
-                                                if (item.LopHocPhan.PhanCongTroGiang.FirstOrDefault(w => w.ID_TaiKhoan == idtks) == null)
                                                 {
                                                     <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-warning">Chưa phân công</span>
                                                 }
-                                                else
-                                                {
-                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-success">Đã phân công</span>
-                                                }
-                                            }
-                                            else
-                                            {
-                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="" class="badge bg-warning">Chưa phân công</span>
-                                            }
-                                        </td>
-                                        <td valign="middle" class="text-nowrap">
-                                            <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
-                                                <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết"><i class="bi bi-info-square"></i></span>
-                                            </a>
-                                        </td>
-                                    </tr>
+                                            </td>
+                                            <td valign="middle" class="text-nowrap">
+                                                <a style="font-size: 20px" role="button" id="chitietungtuyen-@item.ID" titleForm="Thông tin ứng tuyển Trợ giảng @item.MSSV - @item.HoTen" name="@item.ID" class="text-primary">
+                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="Xem chi tiết"><i class="bi bi-info-square"></i></span>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    }
                                 }
                             </tbody>
                         </table>
