--- a/Views/TermAndMajor/Faculty.cshtml
+++ b/Views/TermAndMajor/Faculty.cshtml
@@ -47,7 +47,7 @@
                             <thead class="table-light">
                                 <tr>
                                     <th>Tên khoa</th>
-                                    <th></th>
+                                    <th style="width: 80px"></th>
                                 </tr>
                             </thead>
                             <tbody>
