--- a/Views/TimeTable/_IndexGV.cshtml
+++ b/Views/TimeTable/_IndexGV.cshtml
@@ -39,11 +39,11 @@
 
                         if (id_hkGanNhat == item.ID)
                         {
-                            <option selected value="@item.ID">Học kỳ @item.TenHocKy</option>
+                            <option selected value="@item.ID">@item.TenHocKy</option>
                         }
                         else
                         {
-                            <option value="@item.ID">Học kỳ @item.TenHocKy</option>
+                            <option value="@item.ID">@item.TenHocKy</option>
                         }
                     }
                 </select>
